修复名言库和故事库的修改和删除

--- a/options.html
+++ b/options.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>每日鸡血 - 设置</title>
   <link rel="stylesheet" href="styles/options.css">
 </head>
+
 <body>
   <div class="container">
     <!-- 头部 -->
@@ -21,7 +23,8 @@
     <section class="section">
       <h2 class="section-title">
         <svg viewBox="0 0 24 24" width="20" height="20">
-          <path fill="currentColor" d="M22 5.72l-4.6-3.86-.9.66 3.5 2.95L8.5 2.5 2.62 8.62l.9.66L7 10l-4.6 3.86.9.66 4.6-3.86L11 22l5.9-5.88-3.5-2.95 4.6-3.86-.9-.66zM9.5 12.5l-2.5-2.5 1.5-1.5 2.5 2.5-1.5 1.5zM14.5 12.5l-2.5-2.5 1.5-1.5 2.5 2.5-1.5 1.5zM5 15.5l2.5 2.5-1.5 1.5-2.5-2.5 1.5-1.5zM12 15.5l2.5 2.5-1.5 1.5-2.5-2.5 1.5-1.5z"/>
+          <path fill="currentColor"
+            d="M22 5.72l-4.6-3.86-.9.66 3.5 2.95L8.5 2.5 2.62 8.62l.9.66L7 10l-4.6 3.86.9.66 4.6-3.86L11 22l5.9-5.88-3.5-2.95 4.6-3.86-.9-.66zM9.5 12.5l-2.5-2.5 1.5-1.5 2.5 2.5-1.5 1.5zM14.5 12.5l-2.5-2.5 1.5-1.5 2.5 2.5-1.5 1.5zM5 15.5l2.5 2.5-1.5 1.5-2.5-2.5 1.5-1.5zM12 15.5l2.5 2.5-1.5 1.5-2.5-2.5 1.5-1.5z" />
         </svg>
         通知设置
       </h2>
@@ -75,7 +78,8 @@
     <section class="section">
       <h2 class="section-title">
         <svg viewBox="0 0 24 24" width="20" height="20">
-          <path fill="currentColor" d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9h-4v4h-2v-4H9V9h4V5h2v4h4v2z"/>
+          <path fill="currentColor"
+            d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9h-4v4h-2v-4H9V9h4V5h2v4h4v2z" />
         </svg>
         内容管理
       </h2>
@@ -91,7 +95,7 @@
           <span>共 <strong id="quoteCount">0</strong> 条名言</span>
           <button class="btn btn-sm" id="addQuoteBtn">
             <svg viewBox="0 0 24 24" width="14" height="14">
-              <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+              <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
             </svg>
             添加名言
           </button>
@@ -108,7 +112,7 @@
           <span>共 <strong id="storyCount">0</strong> 个故事</span>
           <button class="btn btn-sm" id="addStoryBtn">
             <svg viewBox="0 0 24 24" width="14" height="14">
-              <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+              <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
             </svg>
             添加故事
           </button>
@@ -124,7 +128,7 @@
     <section class="section">
       <h2 class="section-title">
         <svg viewBox="0 0 24 24" width="20" height="20">
-          <path fill="currentColor" d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
+          <path fill="currentColor" d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" />
         </svg>
         导入导出
       </h2>
@@ -161,7 +165,8 @@
     <section class="section">
       <h2 class="section-title">
         <svg viewBox="0 0 24 24" width="20" height="20">
-          <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/>
+          <path fill="currentColor"
+            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z" />
         </svg>
         在线抓取
       </h2>
@@ -188,7 +193,8 @@
     <section class="section">
       <h2 class="section-title">
         <svg viewBox="0 0 24 24" width="20" height="20">
-          <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/>
+          <path fill="currentColor"
+            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z" />
         </svg>
         关于
       </h2>
@@ -212,7 +218,7 @@
     <div class="modal">
       <div class="modal-header">
         <h3 id="quoteModalTitle">添加名言</h3>
-        <button class="modal-close" onclick="closeQuoteModal()">×</button>
+        <button class="modal-close" id="closeQuoteModalBtn">×</button>
       </div>
       <div class="modal-body">
         <div class="form-group">
@@ -225,7 +231,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" onclick="closeQuoteModal()">取消</button>
+        <button class="btn btn-secondary" id="cancelQuoteBtn">取消</button>
         <button class="btn btn-primary" id="saveQuoteBtn">保存</button>
       </div>
     </div>
@@ -236,7 +242,7 @@
     <div class="modal">
       <div class="modal-header">
         <h3 id="storyModalTitle">添加故事</h3>
-        <button class="modal-close" onclick="closeStoryModal()">×</button>
+        <button class="modal-close" id="closeStoryModalBtn">×</button>
       </div>
       <div class="modal-body">
         <div class="form-group">
@@ -249,7 +255,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" onclick="closeStoryModal()">取消</button>
+        <button class="btn btn-secondary" id="cancelStoryBtn">取消</button>
         <button class="btn btn-primary" id="saveStoryBtn">保存</button>
       </div>
     </div>
@@ -260,4 +266,5 @@
 
   <script src="options.js"></script>
 </body>
+
 </html>
