--- a/icons/generator.html
+++ b/icons/generator.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <title>生成图标 - 每日鸡血</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       background: #1a1a1a;
@@ -16,47 +22,93 @@
       justify-content: center;
       padding: 40px;
     }
-    h1 { margin-bottom: 20px; color: #e53935; }
-    p { color: #b0b0b0; margin-bottom: 30px; }
+
+    h1 {
+      margin-bottom: 20px;
+      color: #ff1744;
+      text-shadow: 0 0 10px rgba(255, 23, 68, 0.5);
+    }
+
+    p {
+      color: #b0b0b0;
+      margin-bottom: 30px;
+    }
+
     .canvas-container {
       display: flex;
       gap: 20px;
       flex-wrap: wrap;
       justify-content: center;
+      background: #242424;
+      padding: 30px;
+      border-radius: 16px;
+      border: 1px solid #333;
     }
+
     .canvas-item {
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
     canvas {
+      /*棋盘格背景，显示透明效果*/
+      background-image: linear-gradient(45deg, #333 25%, transparent 25%), linear-gradient(-45deg, #333 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #333 75%), linear-gradient(-45deg, transparent 75%, #333 75%);
+      background-size: 20px 20px;
+      background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
       border-radius: 8px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+      margin-bottom: 10px;
     }
-    .label { margin-top: 10px; color: #757575; font-size: 12px; }
-    .download-btn {
-      margin-top: 10px;
-      padding: 6px 12px;
-      background: #e53935;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+
+    .label {
+      margin-top: 5px;
+      color: #757575;
       font-size: 12px;
     }
-    .download-btn:hover { background: #c62828; }
+
+    .download-btn {
+      margin-top: 10px;
+      padding: 8px 16px;
+      background: linear-gradient(135deg, #b71c1c, #ff1744);
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 12px;
+      font-weight: bold;
+      transition: all 0.2s;
+    }
+
+    .download-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(255, 23, 68, 0.4);
+    }
+
     .note {
       margin-top: 30px;
       padding: 16px;
-      background: #242424;
+      background: rgba(255, 23, 68, 0.1);
+      border: 1px solid rgba(255, 23, 68, 0.3);
       border-radius: 8px;
       max-width: 600px;
-      color: #b0b0b0;
+      color: #ff8a80;
       font-size: 14px;
+    }
+
+    code {
+      background: rgba(0, 0, 0, 0.3);
+      padding: 2px 6px;
+      border-radius: 4px;
+      color: #fff;
     }
   </style>
 </head>
+
 <body>
   <h1>每日鸡血 - 图标生成器</h1>
-  <p>点击下载按钮生成并保存图标文件</p>
+  <p>能量核心图标（背景透明）</p>
 
   <div class="canvas-container">
     <div class="canvas-item">
@@ -78,62 +130,48 @@
 
   <div class="note">
     <strong>说明：</strong>
-    请将下载的图标文件保存到项目的 <code>icons</code> 文件夹中，文件名分别为：
-    <code>icon16.png</code>、<code>icon48.png</code>、<code>icon128.png</code>
+    请点击上方按钮下载新的图标文件，并替换 <code>icons</code> 文件夹中的对应文件：
+    <br><code>icon16.png</code>、<code>icon48.png</code>、<code>icon128.png</code>
   </div>
 
   <script>
+    // SVG 内容 (与 icon.svg 保持一致)
+    const svgContent = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+  <defs>
+    <linearGradient id="energyGrad" x1="0%" y1="0%" x2="0%" y2="100%">
+      <stop offset="0%" style="stop-color:#ffd740"/>
+      <stop offset="50%" style="stop-color:#ffab00"/>
+      <stop offset="100%" style="stop-color:#ff6d00"/>
+    </linearGradient>
+    <filter id="glow" x="-20%" y="-20%" width="140%" height="140%">
+      <feGaussianBlur stdDeviation="1.5" result="blur"/>
+      <feComposite in="SourceGraphic" in2="blur" operator="over"/>
+    </filter>
+  </defs>
+  <circle cx="64" cy="64" r="56" fill="none" stroke="#ff1744" stroke-width="4" stroke-dasharray="8,6" filter="url(#glow)"/>
+  <g transform="translate(64, 64)">
+    <path d="M-22 -32 L-22 36 L22 36 L22 -32 L14 -42 L-14 -42 Z" fill="#d50000" stroke="#b71c1c" stroke-width="2"/>
+    <rect x="-16" y="-30" width="32" height="60" fill="url(#energyGrad)"/>
+    <rect x="-8" y="-20" width="16" height="40" fill="#ffffff" opacity="0.9" filter="url(#glow)"/>
+    <path d="M-22 -32 L-14 -42 L14 -42 L22 -32" fill="none" stroke="#ff8a80" stroke-width="2"/>
+  </g>
+</svg>`;
+
     function drawIcon(size) {
       const canvas = document.getElementById('canvas' + size);
       const ctx = canvas.getContext('2d');
 
-      // 背景渐变
-      const gradient = ctx.createLinearGradient(0, 0, size, size);
-      gradient.addColorStop(0, '#1a1a1a');
-      gradient.addColorStop(1, '#2d2d2d');
+      const img = new Image();
+      const svgBlob = new Blob([svgContent], { type: 'image/svg+xml;charset=utf-8' });
+      const url = URL.createObjectURL(svgBlob);
 
-      ctx.fillStyle = gradient;
-      ctx.beginPath();
-      ctx.arc(size/2, size/2, size/2 - 1, 0, Math.PI * 2);
-      ctx.fill();
+      img.onload = function () {
+        ctx.clearRect(0, 0, size, size);
+        ctx.drawImage(img, 0, 0, size, size);
+        URL.revokeObjectURL(url);
+      };
 
-      // 边框
-      ctx.strokeStyle = '#e53935';
-      ctx.lineWidth = Math.max(1, size/32);
-      ctx.stroke();
-
-      // 火焰图标
-      const scale = size / 128;
-      ctx.save();
-      ctx.translate(size/2, size/2);
-
-      // 外层火焰
-      const fireGradient = ctx.createLinearGradient(0, 20*scale, 0, -30*scale);
-      fireGradient.addColorStop(0, '#ff6f00');
-      fireGradient.addColorStop(0.5, '#e53935');
-      fireGradient.addColorStop(1, '#ffca28');
-
-      ctx.fillStyle = fireGradient;
-      ctx.beginPath();
-      ctx.moveTo(0, -30*scale);
-      ctx.bezierCurveTo(-20*scale, -15*scale, -25*scale, 5*scale, -20*scale, 20*scale);
-      ctx.bezierCurveTo(-15*scale, 32*scale, 0, 40*scale, 0, 40*scale);
-      ctx.bezierCurveTo(0, 40*scale, 15*scale, 32*scale, 20*scale, 20*scale);
-      ctx.bezierCurveTo(25*scale, 5*scale, 20*scale, -15*scale, 0, -30*scale);
-      ctx.fill();
-
-      // 内层火焰
-      ctx.fillStyle = '#ffca28';
-      ctx.globalAlpha = 0.8;
-      ctx.beginPath();
-      ctx.moveTo(0, -15*scale);
-      ctx.bezierCurveTo(-10*scale, -5*scale, -12*scale, 10*scale, -8*scale, 20*scale);
-      ctx.bezierCurveTo(-5*scale, 28*scale, 0, 32*scale, 0, 32*scale);
-      ctx.bezierCurveTo(0, 32*scale, 5*scale, 28*scale, 8*scale, 20*scale);
-      ctx.bezierCurveTo(12*scale, 10*scale, 10*scale, -5*scale, 0, -15*scale);
-      ctx.fill();
-
-      ctx.restore();
+      img.src = url;
     }
 
     function downloadPNG(size) {
@@ -145,7 +183,10 @@
     }
 
     // 绘制所有图标
-    [16, 48, 128].forEach(drawIcon);
+    window.onload = function () {
+      [16, 48, 128].forEach(drawIcon);
+    };
   </script>
 </body>
+
 </html>
