--- a/wide-page.html
+++ b/wide-page.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>每日鸡血</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Microsoft YaHei', sans-serif;
       background: #1a1a1a;
@@ -18,14 +24,71 @@
       min-width: 675px;
       box-sizing: border-box;
     }
-    .container { max-width: none; margin: 0; padding: 0; width: 100%; box-sizing: border-box; }
-    .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 4px; }
-    .logo { display: flex; align-items: center; gap: 8px; }
-    .logo-icon { font-size: 24px; animation: flame 1.2s ease-in-out infinite; }
-    @keyframes flame { 0%,100% { transform: scale(1) rotate(-3deg); } 50% { transform: scale(1.1) rotate(3deg); } }
-    .logo-text { font-size: 18px; font-weight: 600; background: linear-gradient(135deg, #e53935, #ff6f00); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-    .settings-btn { width: 32px; height: 32px; border: none; background: #242424; color: #757575; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: all 0.2s; }
-    .settings-btn:hover { background: #e53935; color: #fff; }
+
+    .container {
+      max-width: none;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 4px;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .logo-icon {
+      font-size: 24px;
+      animation: flame 1.2s ease-in-out infinite;
+    }
+
+    @keyframes flame {
+
+      0%,
+      100% {
+        transform: scale(1) rotate(-3deg);
+      }
+
+      50% {
+        transform: scale(1.1) rotate(3deg);
+      }
+    }
+
+    .logo-text {
+      font-size: 18px;
+      font-weight: 600;
+      background: linear-gradient(135deg, #e53935, #ff6f00);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .settings-btn {
+      width: 32px;
+      height: 32px;
+      border: none;
+      background: #242424;
+      color: #757575;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.2s;
+    }
+
+    .settings-btn:hover {
+      background: #e53935;
+      color: #fff;
+    }
 
     /* 卡片样式 */
     .card {
@@ -39,50 +102,300 @@
       overflow: hidden;
       box-sizing: border-box;
     }
+
     .card-body {
       padding: 20px 27px;
       min-height: 240px;
       max-height: 240px;
       overflow-y: auto;
     }
-    ::-webkit-scrollbar { width: 5px; }
-    ::-webkit-scrollbar-track { background: transparent; }
-    ::-webkit-scrollbar-thumb { background: #333; border-radius: 3px; }
-    ::-webkit-scrollbar-thumb:hover { background: #e53935; }
-    .badge { display: inline-flex; align-items: center; gap: 6px; padding: 5px 12px; background: linear-gradient(135deg, #e53935, #ff6f00); color: white; font-size: 13px; font-weight: 500; border-radius: 20px; margin-bottom: 12px; }
-    .dot { width: 6px; height: 6px; background: white; border-radius: 50%; animation: pulse 1.5s ease-in-out infinite; }
-    @keyframes pulse { 0%,100% { opacity: 1; } 50% { opacity: 0.5; } }
-    .quote { font-size: 18px; line-height: 1.8; color: #fff; padding-left: 16px; border-left: 3px solid #e53935; margin: 4px 0 12px 0; }
-    .author { text-align: right; font-size: 14px; color: #757575; font-style: italic; margin: 0; }
-    .story-title { font-size: 20px; font-weight: 600; color: #e53935; margin: 0 0 10px 0; display: flex; align-items: center; gap: 8px; }
-    .story-title::before { content: ''; width: 6px; height: 6px; background: linear-gradient(135deg, #e53935, #ff6f00); border-radius: 50%; }
-    .story-text { font-size: 16px; line-height: 1.8; color: #b0b0b0; text-align: justify; }
 
-    .card-footer { display: flex; gap: 10px; padding: 14px 20px; border-top: 1px solid #333; background: rgba(0,0,0,0.2); }
-    .btn { flex: 1; padding: 10px 18px; border: none; border-radius: 8px; font-size: 14px; font-weight: 500; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 6px; transition: all 0.2s; }
-    .btn-sec { background: #242424; color: #fff; border: 1px solid #333; }
-    .btn-sec:hover { border-color: #e53935; color: #e53935; background: rgba(229,57,53,0.1); }
-    .btn-pri { background: linear-gradient(135deg, #e53935, #c62828); color: white; box-shadow: 0 4px 12px rgba(229,57,53,0.3); }
-    .btn-pri:hover { transform: translateY(-1px); box-shadow: 0 4px 16px rgba(229,57,53,0.4); }
-    .btn-load { opacity: 0.7; pointer-events: none; }
-    .btn-load::after { content: ''; width: 14px; height: 14px; border: 2px solid transparent; border-top-color: currentColor; border-radius: 50%; animation: spin 0.6s linear infinite; margin-left: 4px; }
-    @keyframes spin { to { transform: rotate(360deg); } }
+    ::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #333;
+      border-radius: 3px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #e53935;
+    }
+
+    .badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      padding: 5px 12px;
+      background: linear-gradient(135deg, #e53935, #ff6f00);
+      color: white;
+      font-size: 13px;
+      font-weight: 500;
+      border-radius: 20px;
+      margin-bottom: 12px;
+    }
+
+    .dot {
+      width: 6px;
+      height: 6px;
+      background: white;
+      border-radius: 50%;
+      animation: pulse 1.5s ease-in-out infinite;
+    }
+
+    @keyframes pulse {
+
+      0%,
+      100% {
+        opacity: 1;
+      }
+
+      50% {
+        opacity: 0.5;
+      }
+    }
+
+    .quote {
+      font-size: 18px;
+      line-height: 1.8;
+      color: #fff;
+      padding-left: 16px;
+      border-left: 3px solid #e53935;
+      margin: 4px 0 12px 0;
+    }
+
+    .author {
+      text-align: right;
+      font-size: 14px;
+      color: #757575;
+      font-style: italic;
+      margin: 0;
+    }
+
+    .story-title {
+      font-size: 20px;
+      font-weight: 600;
+      color: #e53935;
+      margin: 0 0 10px 0;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .story-title::before {
+      content: '';
+      width: 6px;
+      height: 6px;
+      background: linear-gradient(135deg, #e53935, #ff6f00);
+      border-radius: 50%;
+    }
+
+    .story-text {
+      font-size: 16px;
+      line-height: 1.8;
+      color: #b0b0b0;
+      text-align: justify;
+    }
+
+    .card-footer {
+      display: flex;
+      gap: 10px;
+      padding: 14px 20px;
+      border-top: 1px solid #333;
+      background: rgba(0, 0, 0, 0.2);
+    }
+
+    .btn {
+      flex: 1;
+      padding: 10px 18px;
+      border: none;
+      border-radius: 8px;
+      font-size: 14px;
+      font-weight: 500;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      transition: all 0.2s;
+    }
+
+    .btn-sec {
+      background: #242424;
+      color: #fff;
+      border: 1px solid #333;
+    }
+
+    .btn-sec:hover {
+      border-color: #e53935;
+      color: #e53935;
+      background: rgba(229, 57, 53, 0.1);
+    }
+
+    .btn-pri {
+      background: linear-gradient(135deg, #e53935, #c62828);
+      color: white;
+      box-shadow: 0 4px 12px rgba(229, 57, 53, 0.3);
+    }
+
+    .btn-pri:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 4px 16px rgba(229, 57, 53, 0.4);
+    }
+
+    .btn-load {
+      opacity: 0.7;
+      pointer-events: none;
+    }
+
+    .btn-load::after {
+      content: '';
+      width: 14px;
+      height: 14px;
+      border: 2px solid transparent;
+      border-top-color: currentColor;
+      border-radius: 50%;
+      animation: spin 0.6s linear infinite;
+      margin-left: 4px;
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
 
     /* 统计区域 */
-    .stats { display: flex; gap: 10px; margin-top: 10px; width: 100%; }
-    .stat { flex: 1; background: #242424; border: 1px solid #333; border-radius: 10px; padding: 16px; text-align: center; }
-    .stat-value { display: block; font-size: 24px; font-weight: 600; color: #e53935; }
-    .stat-label { font-size: 14px; color: #757575; }
+    .stats {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+      width: 100%;
+    }
+
+    .stat {
+      flex: 1;
+      background: #242424;
+      border: 1px solid #333;
+      border-radius: 10px;
+      padding: 16px;
+      text-align: center;
+    }
+
+    .stat-value {
+      display: block;
+      font-size: 24px;
+      font-weight: 600;
+      color: #e53935;
+    }
+
+    .stat-label {
+      font-size: 14px;
+      color: #757575;
+    }
 
     /* 设置链接 */
-    .link-btn { width: 100%; margin-top: 10px; padding: 12px; background: transparent; border: 1px solid #333; border-radius: 8px; color: #b0b0b0; font-size: 14px; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 6px; transition: all 0.2s; }
-    .link-btn:hover { border-color: #e53935; color: #e53935; background: rgba(229,57,53,0.1); }
+    .link-btn {
+      width: 100%;
+      margin-top: 10px;
+      padding: 12px;
+      background: transparent;
+      border: 1px solid #333;
+      border-radius: 8px;
+      color: #b0b0b0;
+      font-size: 14px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      transition: all 0.2s;
+    }
+
+    .link-btn:hover {
+      border-color: #e53935;
+      color: #e53935;
+      background: rgba(229, 57, 53, 0.1);
+    }
 
     /* 内容切换动画 */
-    .content-fade { animation: fadeIn 0.2s ease; }
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    .content-fade {
+      animation: fadeIn 0.2s ease;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+
+    /* 进度条样式 */
+    .progress-section {
+      margin-bottom: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding: 0 4px;
+    }
+
+    .progress-item {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+    }
+
+    .progress-label {
+      display: flex;
+      justify-content: space-between;
+      font-size: 12px;
+      color: #757575;
+      font-weight: 500;
+    }
+
+    .progress-bar-bg {
+      height: 8px;
+      background: #242424;
+      border-radius: 4px;
+      overflow: hidden;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+      border: 1px solid #333;
+      position: relative;
+    }
+
+    .progress-bar-fill {
+      height: 100%;
+      background: linear-gradient(90deg, #c62828, #e53935);
+      width: 0%;
+      border-radius: 3px;
+      box-shadow: 0 0 8px rgba(229, 57, 53, 0.4);
+      transition: width 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+      position: relative;
+    }
+
+    .progress-bar-fill::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(to bottom,
+          rgba(255, 255, 255, 0.15) 0%,
+          transparent 50%,
+          rgba(0, 0, 0, 0.1) 100%);
+    }
   </style>
 </head>
+
 <body>
   <div class="container">
     <!-- 头部 -->
@@ -92,9 +405,43 @@
         <span class="logo-text">每日鸡血</span>
       </div>
       <button class="settings-btn" id="settingsBtn">
-        <svg viewBox="0 0 24 24" width="22" height="22"><path fill="currentColor" d="M19.14 12.94c.04-.31.06-.63.06-.94 0-.31-.02-.63-.06-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg>
+        <svg viewBox="0 0 24 24" width="22" height="22">
+          <path fill="currentColor"
+            d="M19.14 12.94c.04-.31.06-.63.06-.94 0-.31-.02-.63-.06-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z" />
+        </svg>
       </button>
     </header>
+
+    <!-- 进度条区域 -->
+    <div class="progress-section">
+      <div class="progress-item">
+        <div class="progress-label">
+          <span>今日剩余</span>
+          <span class="progress-text" id="dayProgressText">--%</span>
+        </div>
+        <div class="progress-bar-bg">
+          <div class="progress-bar-fill" id="dayProgressBar" style="width: 0%"></div>
+        </div>
+      </div>
+      <div class="progress-item">
+        <div class="progress-label">
+          <span>本月剩余</span>
+          <span class="progress-text" id="monthProgressText">--%</span>
+        </div>
+        <div class="progress-bar-bg">
+          <div class="progress-bar-fill" id="monthProgressBar" style="width: 0%"></div>
+        </div>
+      </div>
+      <div class="progress-item">
+        <div class="progress-label">
+          <span>今年剩余</span>
+          <span class="progress-text" id="yearProgressText">--%</span>
+        </div>
+        <div class="progress-bar-bg">
+          <div class="progress-bar-fill" id="yearProgressBar" style="width: 0%"></div>
+        </div>
+      </div>
+    </div>
 
     <!-- 今日内容卡片 -->
     <div class="card">
@@ -104,11 +451,17 @@
       </div>
       <div class="card-footer">
         <button class="btn btn-sec" id="refreshBtn">
-          <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/></svg>
+          <svg viewBox="0 0 24 24" width="20" height="20">
+            <path fill="currentColor"
+              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z" />
+          </svg>
           换一批
         </button>
         <button class="btn btn-pri" id="copyBtn">
-          <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+          <svg viewBox="0 0 24 24" width="20" height="20">
+            <path fill="currentColor"
+              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" />
+          </svg>
           复制
         </button>
       </div>
@@ -128,11 +481,15 @@
 
     <!-- 设置链接 -->
     <button class="link-btn" id="openOptionsBtn">
-      <svg viewBox="0 0 24 24" width="20" height="20"><path fill="currentColor" d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"/></svg>
+      <svg viewBox="0 0 24 24" width="20" height="20">
+        <path fill="currentColor"
+          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z" />
+      </svg>
       完整设置
     </button>
   </div>
 
   <script src="wide-page.js"></script>
 </body>
+
 </html>
