--- a/options.html
+++ b/options.html
@@ -74,6 +74,64 @@
       </div>
     </section>
 
+    <!-- 番茄时钟设置 -->
+    <section class="section">
+      <h2 class="section-title">
+        <svg viewBox="0 0 24 24" width="20" height="20">
+          <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z" />
+        </svg>
+        番茄时钟设置
+      </h2>
+
+      <div class="card">
+        <div class="setting-row">
+          <div class="setting-info">
+            <label class="setting-label">自律时间</label>
+            <p class="setting-desc">每次自律的时长（分钟）</p>
+          </div>
+          <div style="display: flex; align-items: center; gap: 10px;">
+            <button class="btn btn-sm" id="decreaseWorkTime" style="flex: 0 0 36px; padding: 8px;">-</button>
+            <input type="number" id="workTime" min="1" max="60" value="25" style="flex: 0 0 80px; background: #2a2a2a; border: 1px solid #333; border-radius: 8px; padding: 10px; color: #fff; text-align: center; font-size: 16px;">
+            <button class="btn btn-sm" id="increaseWorkTime" style="flex: 0 0 36px; padding: 8px;">+</button>
+          </div>
+        </div>
+
+        <div class="setting-row">
+          <div class="setting-info">
+            <label class="setting-label">休息时间</label>
+            <p class="setting-desc">每次休息的时长（分钟）</p>
+          </div>
+          <div style="display: flex; align-items: center; gap: 10px;">
+            <button class="btn btn-sm" id="decreaseBreakTime" style="flex: 0 0 36px; padding: 8px;">-</button>
+            <input type="number" id="breakTime" min="1" max="60" value="25" style="flex: 0 0 80px; background: #2a2a2a; border: 1px solid #333; border-radius: 8px; padding: 10px; color: #fff; text-align: center; font-size: 16px;">
+            <button class="btn btn-sm" id="increaseBreakTime" style="flex: 0 0 36px; padding: 8px;">+</button>
+          </div>
+        </div>
+
+        <div class="setting-row">
+          <div class="setting-info">
+            <label class="setting-label">后台运行</label>
+            <p class="setting-desc">开启后番茄时钟将在后台继续运行，页面关闭后仍能收到提醒</p>
+          </div>
+          <label class="switch">
+            <input type="checkbox" id="pomodoroBackgroundToggle" checked>
+            <span class="switch-slider"></span>
+          </label>
+        </div>
+
+        <div class="setting-row">
+          <div class="setting-info">
+            <label class="setting-label">完成提醒</label>
+            <p class="setting-desc">时间结束时显示通知提醒</p>
+          </div>
+          <label class="switch">
+            <input type="checkbox" id="pomodoroNotificationToggle" checked>
+            <span class="switch-slider"></span>
+          </label>
+        </div>
+      </div>
+    </section>
+
     <!-- 内容管理 -->
     <section class="section">
       <h2 class="section-title">
