--- a/wide-page.html
+++ b/wide-page.html
@@ -104,10 +104,10 @@
     }
 
     .card-body {
-      padding: 24px 32px;
-      min-height: 240px;
-      max-height: 240px;
-      overflow-y: auto;
+      padding: 16px 24px;
+      min-height: auto;
+      height: auto;
+      overflow-y: visible;
     }
 
     ::-webkit-scrollbar {
@@ -131,13 +131,15 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      padding: 5px 12px;
+      padding: 6px 14px;
       background: linear-gradient(135deg, #e53935, #ff6f00);
       color: white;
       font-size: 13px;
       font-weight: 500;
       border-radius: 20px;
       margin-bottom: 12px;
+      vertical-align: middle;
+      /* 与自律时间对齐 */
     }
 
     .dot {
@@ -146,6 +148,8 @@
       background: white;
       border-radius: 50%;
       animation: pulse 1.5s ease-in-out infinite;
+      margin-top: 1px;
+      /* 调整图标垂直位置，与文字对齐 */
     }
 
     @keyframes pulse {
@@ -461,45 +465,53 @@
     <!-- 番茄时钟 -->
     <div class="card">
       <div class="card-body">
-        <div class="badge"><span class="dot"></span><span>番茄时钟</span></div>
-
         <!-- 番茄时钟显示 -->
-        <div class="pomodoro-display" style="text-align: center; margin-bottom: 20px;">
-          <div style="font-size: 14px; color: #757575; margin-bottom: 8px;" id="pomodoroStatus">准备开始</div>
-          <div style="font-size: 48px; font-weight: 700; color: #e53935; margin-bottom: 16px;" id="pomodoroTimer">25:00
-          </div>
-          <div class="progress-item">
-            <div class="progress-label">
-              <span id="pomodoroProgressLabel">自律时间</span>
-              <span class="progress-text" id="pomodoroProgressText">0%</span>
-            </div>
-            <div class="progress-bar-bg">
-              <div class="progress-bar-fill" id="pomodoroProgressBar" style="width: 0%"></div>
-            </div>
-          </div>
-        </div>
+        <div class="pomodoro-display" style="margin-bottom: 20px; overflow: visible; height: auto;">
+          <!-- 标题放到左上角 -->
+          <div class="badge" style="margin-bottom: 16px;"><span class="dot"></span><span>番茄时钟</span></div>
 
-        <!-- 番茄时钟控制按钮 -->
-        <div style="display: flex; gap: 16px; justify-content: center;">
-          <button class="btn btn-pri" id="startPomodoro">
-            <svg viewBox="0 0 24 24" width="20" height="20">
-              <path fill="currentColor" d="M8 5v14l11-7z" />
-            </svg>
-            开始
-          </button>
-          <button class="btn btn-sec" id="pausePomodoro" disabled>
-            <svg viewBox="0 0 24 24" width="20" height="20">
-              <path fill="currentColor" d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
-            </svg>
-            暂停
-          </button>
-          <button class="btn btn-sec" id="resetPomodoro" disabled>
-            <svg viewBox="0 0 24 24" width="20" height="20">
-              <path fill="currentColor"
-                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z" />
-            </svg>
-            重置
-          </button>
+          <!-- 主要内容区域 -->
+          <div style="display: flex; flex-direction: column; gap: 12px;">
+            <!-- 状态和时间 -->
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <div style="font-size: 14px; color: #757575; margin-bottom: 4px;" id="pomodoroStatus">准备开始</div>
+              <div style="font-size: 42px; font-weight: 700; color: #e53935;" id="pomodoroTimer">25:00</div>
+            </div>
+
+            <!-- 进度条 -->
+            <div class="progress-item">
+              <div class="progress-label">
+                <span id="pomodoroProgressLabel">自律时间</span>
+                <span class="progress-text" id="pomodoroProgressText">0%</span>
+              </div>
+              <div class="progress-bar-bg">
+                <div class="progress-bar-fill" id="pomodoroProgressBar" style="width: 0%"></div>
+              </div>
+            </div>
+
+            <!-- 番茄时钟控制按钮 -->
+            <div style="display: flex; gap: 12px; justify-content: center;">
+              <button class="btn btn-pri" id="startPomodoro">
+                <svg viewBox="0 0 24 24" width="20" height="20">
+                  <path fill="currentColor" d="M8 5v14l11-7z" />
+                </svg>
+                开始
+              </button>
+              <button class="btn btn-sec" id="pausePomodoro" disabled>
+                <svg viewBox="0 0 24 24" width="20" height="20">
+                  <path fill="currentColor" d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
+                </svg>
+                暂停
+              </button>
+              <button class="btn btn-sec" id="resetPomodoro" disabled>
+                <svg viewBox="0 0 24 24" width="20" height="20">
+                  <path fill="currentColor"
+                    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z" />
+                </svg>
+                重置
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
